--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
+
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 16x;
     max-width: 960px;
     margin: auto;
 }
+
 h1 {
     font-size: 3em;
     letter-spacing: .6em;
     padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 h2 {
     font-size: 1.5em;
+    padding-bottom: 1em;
 }
 
 h3 {
     font-size: 1em;
+    padding-bottom: 1em;
 }
 
 main { 
@@ -24,6 +30,7 @@ main {
     grid-gap: 1em;
     margin-top: 3em;
 }
+
 header {
     text-align: center;
     margin: auto 2em;
@@ -37,6 +44,7 @@ i {
     margin-right: .5em;
 }
 
+
 p {
     margin: .2em auto
 }
@@ -47,14 +55,12 @@ hr {
     height: 1px;
 }
 
-h1, h2, h3 {
-    font-weight: 100;
-    margin-bottom: 0;
-    padding-bottom: 1em;
-}
-
 @media (min-width: 1000px){
     #mainLeft {
         border-right: 1px solid lightgray;
     }
+}
+
+#mainLeft {
+    border-right: 1px solid lightgray;
 }
